--- a/src/app/create-ticket/create-ticket.component.css
+++ b/src/app/create-ticket/create-ticket.component.css
@@ -3,7 +3,7 @@
     font-size: 35px;
   }
 
-  h3{
+  h1{
     margin-top: 20px;
     margin-left: 20%;
     color: #008aca;
@@ -23,6 +23,20 @@
     border-radius: 8px;
   }
 
+  #allTickets {
+    position: relative;
+    float: right;
+    margin-top: -110px;
+    margin-right: 140px;
+    background-color: #4caf50;
+    color: white;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    border: none;
+    border-radius: 8px;
+  }
+
   #logout:hover {
     background-color: #45a049;
   }
@@ -33,44 +47,51 @@
   }
 
   #urgency, #category, #name {
-    width: 40%;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
-  #urgency {
-    margin-top: 50px;
+  .form-select {
+    font-size: 24px;
+    width: 290px;
   }
 
-  #description {
-    width: 60%;
+  .form-control {
+    font-size: 24px;
+    width: 290px;
   }
 
-  #comment {
-    width: 60%;
+  .form-control-big {
+    margin-top: 10px;
+    width: 350px;
+    font-size: 24px;
   }
 
   #urgency span {
-    margin-right: 32px;
+    margin-right: 53px;
     margin-top: 5px;
   }
 
   #category span {
     margin-top: 5px;
-    margin-right: 27px;
+    margin-right: 43px;
+    font-size: 30px;
   }
 
   #name span {
     margin-top: 5px;
-    margin-right: 52px;
+    margin-right: 84px;
+    font-size: 30px;
   }
 
   #comment span {
-    margin-top: 5px;
-    margin-right: 22px;
+    margin-right: 34px;
+    font-size: 30px;
   }
 
   #description span {
-    margin-top: 5px;
-    margin-right: 10px;
+    margin-right: 14px;
+    font-size: 30px;
   }
 
   #date {
@@ -79,18 +100,24 @@
 
   #date label {
     margin-right: 10px;
+    font-size: 30px;
   }
 
   #date input {
-    width: 150px;
-    height: 30px;
+    width: 200px;
+    height: 45px;
     border: 2px solid white;
     border-radius: 8px;
+    font-size: 24px;
   }
 
   .text {
-    font-size: 18px;
+    font-size: 30px;
     color: #008aca;
+  }
+
+  #fileInput {
+    font-size: 24px;
   }
 
   form {
@@ -105,22 +132,28 @@
     margin-top: 20px;
   }
 
+  #basic-url {
+    width: 284px;
+  }
+
   #buttons #submit {
     background-color: #4caf50;
     color: white;
     padding: 10px 20px;
-    font-size: 18px;
+    font-size: 26px;
     cursor: pointer;
     border: none;
     border-radius: 8px;
     margin-left: 20px;
+    margin-top: 10px;
   }
 
   #buttons #draft {
     background-color: #008aca;
+    margin-top: 10px;
     color: white;
     padding: 10px 20px;
-    font-size: 18px;
+    font-size: 26px;
     cursor: pointer;
     border: none;
     border-radius: 8px;
